--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,15 +100,16 @@ body {
   text-transform: uppercase;
   border-radius: 3px;
   width: 95%; }
+  .sum-total h3 {
+    font-size: 0.9em; }
+  .sum-total h2 {
+    font-weight: normal; }
 
-.budget-total {
-  color: #1A4C6D; }
-
-.income-total {
-  color: #126146; }
-
-.expense-total {
+.expense {
   color: #ad000d; }
+
+.income {
+  color: #126146; }
 
 #activity {
   width: 97.5%;
@@ -119,7 +120,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 3px; }
   #activity td, #activity th {
-    padding: 15px 30px;
+    padding: 15px 20px;
     border-bottom: 1px solid #ccc;
     text-align: center; }
 
