--- a/views/users/dashboard.erb
+++ b/views/users/dashboard.erb
@@ -13,6 +13,7 @@
   </div>
   <div class="download flex-cell">
     <button id="downloadButton" class="button"><span class="fa fa-download"></span>Download</button>
+    <button id="downloadButton" class="button"><span class="fa fa-rocket"></span>Export</button>
   </div>
 </div>
 <div class="sum-total flex-grid">
@@ -20,10 +21,13 @@
 <div class="transaction">
   <table id="activity">
     <thead>
-      <th>Date</th>
-      <th>Amount</th>
-      <th>Description</th>
-      <th>Account Name</th>
+      <tr>
+        <th class="date-label">Date</th>
+        <th class="amount-label">Amount</th>
+        <th class="amount-label">Description</th>
+        <th class="tag-label">Tags</th>
+        <th class="account-name">Account Name</th>
+      </tr>
     </thead>
     <tbody>
     </tbody>
