--- a/views/users/dashboard.erb
+++ b/views/users/dashboard.erb
@@ -1,6 +1,12 @@
 <div class="overview flex-grid">
   <div class="flex-cell">
     <button id="addButton" class="primary"><span class="fa fa-usd"></span>Add</button>
+    <ul id="addOptions">
+      <li>Add Transaction</li>
+      <li>Add Account</li>
+      <li>Add Budget</li>
+      <li>Add Tags</li>
+    </ul>
     <button id="uploadButton" class="primary"><span class="fa fa-upload"></span>Upload</button>
   </div>
   <div class="flex-cell">
