--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,10 +58,43 @@ body {
     color: #004774;
     border: 1px solid #004774; }
 
+form fieldset {
+  border: none; }
+
 .content {
   background: #ddd;
   width: 85%;
   margin-left: 15%;
+  height: 100%; }
+
+.overlay, #transactionOverlay, #accountOverlay {
+  background: rgba(0, 0, 0, 0.6);
+  visibility: hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: 1000;
+  font-size: 1.4em; }
+  .overlay .overlay-box, #transactionOverlay .overlay-box, #accountOverlay .overlay-box {
+    position: relative;
+    width: 800px;
+    margin: 100px auto;
+    border: 1px solid #000;
+    padding: 15px;
+    background: #fff;
+    text-align: center; }
+
+.overlay-close {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  text-align: right; }
+
+#formTransactions {
+  width: 100%;
   height: 100%; }
 
 .overview {
@@ -71,6 +104,28 @@ body {
   .overview .flex-cell {
     align-items: center;
     margin: 0 10px; }
+
+.add-upload {
+  position: relative; }
+
+#addOptions {
+  position: absolute;
+  background: #004774;
+  color: #fff;
+  list-style: none;
+  top: 35px;
+  left: 3%;
+  display: none; }
+  #addOptions li {
+    font-size: 1.2em;
+    padding: 10px 30px;
+    border: 1px solid #004774; }
+    #addOptions li:hover {
+      cursor: pointer;
+      color: #004774;
+      background: #fff; }
+    #addOptions li span {
+      margin-right: 5px; }
 
 .search {
   position: relative;
