--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -7,6 +7,48 @@
   height: 100%;
 }
 
+.overlay {
+  background: rgba(0, 0, 0, 0.6);
+  visibility:  hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  z-index: 1000;
+  font-size: 1.4em;
+  .overlay-box {
+    position: relative;
+    width: 800px;
+    margin: 100px auto;
+    border: 1px solid #000;
+    padding: 15px;
+    background: #fff;
+    text-align: center;
+  }
+}
+
+.overlay-close {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  text-align: right;
+}
+
+#transactionOverlay {
+  @extend .overlay;
+}
+
+#formTransactions {
+  width: 100%;
+  height: 100%;
+}
+
+#accountOverlay {
+  @extend .overlay;
+}
+
 .overview {
   background: #FFFFFF;
   padding: 30px;
@@ -14,6 +56,33 @@
   .flex-cell {
     align-items: center;
     margin: 0 10px;
+  }
+}
+
+.add-upload {
+  position: relative;
+}
+
+#addOptions {
+  position: absolute;
+  background: #004774;
+  color: #fff;
+  list-style: none;
+  top: 35px;
+  left: 3%;
+  display: none;
+  li {
+    font-size: 1.2em;
+    padding: 10px 30px;
+    border: 1px solid #004774;
+    &:hover {
+      cursor: pointer;
+      color: #004774;
+      background: #fff;
+    }
+    span {
+      margin-right: 5px;
+    }
   }
 }
 
@@ -84,8 +153,6 @@
 .date-label {
   @extend .date;
 }
-
-
 
 .amount-label {
   @extend .amount;
