--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,20 @@ body {
     border: 1px solid #004774; }
 
 form fieldset {
+  padding: 0;
   border: none; }
+
+.form-aligned {
+  text-align: left; }
+  .form-aligned h4 {
+    margin: 20px 0 0;
+    padding: 25px 0 10px;
+    text-align: left; }
+
+.form-control-group {
+  padding: 15px 20px; }
+  .form-control-group label {
+    margin-right: 5px; }
 
 .content {
   background: #ddd;
@@ -80,18 +93,68 @@ form fieldset {
   font-size: 1.4em; }
   .overlay .overlay-box, #transactionOverlay .overlay-box, #accountOverlay .overlay-box {
     position: relative;
-    width: 800px;
-    margin: 100px auto;
+    width: 820px;
+    margin: 50px auto;
     border: 1px solid #000;
-    padding: 15px;
     background: #fff;
     text-align: center; }
 
+.overlay-form {
+  padding-bottom: 10px; }
+  .overlay-form legend {
+    text-transform: uppercase;
+    background: #162029;
+    width: 800px;
+    color: #fff;
+    padding: 10px;
+    position: absolute;
+    left: 0;
+    z-index: 1001; }
+  .overlay-form input[type="text"] {
+    border: 1px solid #ddd;
+    padding: 5px;
+    margin-right: 15px; }
+  .overlay-form select {
+    width: 120px;
+    padding: 5px 20px 5px 10px;
+    background: #004774;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    color: #fff;
+    border: none; }
+  .overlay-form .primary {
+    margin: 20px 30px;
+    font-size: 0.9em; }
+
+.form-overlay-date {
+  width: 100px; }
+
+.select-arrow {
+  position: relative;
+  right: 20px;
+  color: #fff; }
+
+.radio-overlay {
+  margin-right: 30px !important;
+  vertical-align: middle; }
+  .radio-overlay input {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 2px; }
+
 .overlay-close {
+  color: #fff;
   cursor: pointer;
   position: absolute;
   right: 20px;
-  text-align: right; }
+  top: 13px;
+  text-align: right;
+  z-index: 1002; }
+
+.overlay-legend {
+  margin: 0 5px; }
 
 #formTransactions {
   width: 100%;
@@ -104,6 +167,8 @@ form fieldset {
   .overview .flex-cell {
     align-items: center;
     margin: 0 10px; }
+    .overview .flex-cell h2 {
+      text-align: center !important; }
 
 .add-upload {
   position: relative; }
@@ -160,8 +225,8 @@ form fieldset {
   .sum-total h2 {
     font-weight: normal; }
 
-.amount, .expense, .income, .amount-label {
-  text-align: center; }
+.amount, .amount-label {
+  text-align: right; }
 
 .expense {
   color: #ad000d; }
@@ -192,6 +257,7 @@ form fieldset {
     padding: 15px 20px;
     border-bottom: 1px solid #ccc; }
   #activity th {
+    font-weight: normal;
     text-transform: uppercase; }
 
 /*# sourceMappingURL=style.css.map */
