--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -20,20 +20,81 @@
   font-size: 1.4em;
   .overlay-box {
     position: relative;
-    width: 800px;
-    margin: 100px auto;
+    width: 820px;
+    margin: 50px auto;
     border: 1px solid #000;
-    padding: 15px;
     background: #fff;
     text-align: center;
   }
 }
 
+.overlay-form {
+  padding-bottom: 10px;
+  legend {
+    text-transform: uppercase;
+    background: #162029;
+    width: 800px;
+    color: #fff;
+    padding: 10px;
+    position: absolute;
+    left: 0;
+    z-index: 1001;
+  }
+
+  input[type="text"] {
+    border: 1px solid #ddd;
+    padding: 5px;
+    margin-right: 15px;
+  }
+  select {
+    width: 120px;
+    padding: 5px 20px 5px 10px;
+    background: #004774;
+    -webkit-appearance:none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    color: #fff;
+    border: none;
+  }
+  .primary {
+    margin: 20px 30px;
+    font-size: 0.9em;
+  }
+}
+
+.form-overlay-date {
+  width: 100px;
+}
+
+.select-arrow {
+  position: relative;
+  right: 20px;
+  color: #fff;
+}
+
+.radio-overlay {
+  margin-right: 30px !important;
+  vertical-align: middle;
+  input {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 2px;
+  }
+}
+
 .overlay-close {
+  color: #fff;
   cursor: pointer;
   position: absolute;
   right: 20px;
+  top: 13px;
   text-align: right;
+  z-index: 1002;
+}
+
+.overlay-legend {
+  margin: 0 5px;
 }
 
 #transactionOverlay {
@@ -56,6 +117,9 @@
   .flex-cell {
     align-items: center;
     margin: 0 10px;
+    h2 {
+      text-align: center !important;
+    }
   }
 }
 
@@ -133,16 +197,14 @@
 }
 
 .amount {
-  text-align: center;
+  text-align: right;
 }
 
 .expense {
-  @extend .amount;
   color: #ad000d;
 }
 
 .income {
-  @extend .amount;
   color: #126146;
 }
 
@@ -195,6 +257,7 @@
   }
 
   th {
+    font-weight: normal;
     text-transform: uppercase;
   }
 }
