--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -42,6 +42,8 @@
   }
 
   input[type="text"] {
+    width: 200px;
+    border-radius: 3px;
     border: 1px solid #ddd;
     padding: 5px;
     margin-right: 15px;
@@ -108,6 +110,15 @@
 
 #accountOverlay {
   @extend .overlay;
+}
+
+#intAccountSearch {
+  padding: 8px 10px;
+  width: 300px;
+}
+
+#accountSearchBtn {
+  margin: 20px 0;
 }
 
 .overview {
