--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -45,7 +45,7 @@
     width: 200px;
     border-radius: 3px;
     border: 1px solid #ddd;
-    padding: 5px;
+    padding: 8px;
     margin-right: 15px;
   }
   select {
@@ -112,13 +112,37 @@
   @extend .overlay;
 }
 
-#intAccountSearch {
-  padding: 8px 10px;
-  width: 300px;
+#budgetOverlay {
+  @extend .overlay;
 }
 
-#accountSearchBtn {
-  margin: 20px 0;
+#searchAccountGroup {
+  position: relative;
+  legend  {
+    height: 20px;
+  }
+  span {
+    position: absolute;
+    bottom: 46px;
+    left: 33px;
+    font-size: 1.1em;
+  }
+
+  input[type="text"] {
+    padding: 8px 10px 8px 35px;
+    width: 300px;
+    margin-right: 0;
+  }
+
+  button {
+    margin-left: 5px;
+  }
+}
+
+#addBudgetForm {
+  td, th {
+    padding: 10px;
+  }
 }
 
 .overview {
