Add a pie chart and monthly expenses and income

--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -4,6 +4,7 @@
 }
 
 html {
+  background: #ddd;
   font: 62.5%/1.5 'Montserrat', sans-serif;
   height: 100%;
 }
@@ -45,11 +46,19 @@ body {
 }
 
 .flex-grid {
-  display: flex;
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 .flex-cell {
-  flex: 1;
+  -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 1;         /* OLD - Firefox 19- */
+  -webkit-flex: 1;          /* Chrome */
+  -ms-flex: 1;              /* IE 10 */
+  flex: 1;     
 }
 
 .button {
@@ -100,4 +109,26 @@ form {
   label {
     margin-right: 5px;
   }
+}
+
+
+.widget {
+
+
+}
+
+.widget-container {
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin: 10px;
+}
+
+.chart-widget {
+  height: 300px;
+}
+
+.ct-label {
+  fill: #000 !important;
+  font-size: 1.3em;
 }
