--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/chartist.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/minimal.css">
     <script src="/js/pace.min.js"></script>
@@ -37,5 +38,6 @@
       <%= yield %>
     </div>
     <script src="/js/lodash.min.js"></script>
+    <script src="/js/dist/chartist.min.js"></script>
   </body>
 </html>
