--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
   margin: 0; }
 
 html {
+  background: #ddd;
   font: 62.5%/1.5 'Montserrat', sans-serif;
   height: 100%; }
 
@@ -35,19 +36,36 @@ body {
         padding: 0 10px; }
 
 .flex-grid {
-  display: flex; }
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */ }
 
 .flex-cell {
+  -webkit-box-flex: 1;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 1;
+  /* OLD - Firefox 19- */
+  -webkit-flex: 1;
+  /* Chrome */
+  -ms-flex: 1;
+  /* IE 10 */
   flex: 1; }
 
-.button, .primary {
+.button, .primary, #addBudgetForm .button-budget {
   border-radius: 3px;
   text-transform: uppercase;
   padding: 7px 24px;
   font-size: 1.3em;
   margin: 0 10px;
   border: 1px solid transparent; }
-  .button span, .primary span {
+  .button span, .primary span, #addBudgetForm .button-budget span {
     padding: 0 5px 0 0; }
 
 .primary {
@@ -73,6 +91,19 @@ form fieldset {
   padding: 15px 20px; }
   .form-control-group label {
     margin-right: 5px; }
+
+.widget-container {
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin: 10px; }
+
+.chart-widget {
+  height: 300px; }
+
+.ct-label {
+  fill: #000 !important;
+  font-size: 1.3em; }
 
 .content {
   background: #ddd;
@@ -117,6 +148,7 @@ form fieldset {
     padding: 8px;
     margin-right: 15px; }
   .overlay-form select {
+    font-size: 0.9em;
     width: 120px;
     padding: 5px 20px 5px 10px;
     background: #004774;
@@ -180,6 +212,10 @@ form fieldset {
 
 #addBudgetForm td, #addBudgetForm th {
   padding: 10px; }
+#addBudgetForm .button, #addBudgetForm .primary, #addBudgetForm .button-budget {
+  margin-left: 0; }
+#addBudgetForm .button-budget {
+  font-size: 0.9em; }
 
 .overview {
   background: #FFFFFF;
