--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,8 +8,6 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/chartist.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/minimal.css">
-    <script src="/js/pace.min.js"></script>
   </head>
   <body>
     <nav class="nav">
@@ -37,7 +35,9 @@
     <div class="content">
       <%= yield %>
     </div>
+    <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/lodash.min.js"></script>
     <script src="/js/dist/chartist.min.js"></script>
+    <script src="/js/dist/app.js"></script>
   </body>
 </html>
