Updated the layout and look

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,308 +1,1 @@
-@import 'base';
-
-.content {
-  background: #ddd;
-  width: 85%;
-  margin-left: 15%;
-  height: 100%;
-}
-
-.overlay {
-  background: rgba(0, 0, 0, 0.6);
-  visibility:  hidden;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  z-index: 1000;
-  font-size: 1.4em;
-  .overlay-box {
-    position: relative;
-    width: 820px;
-    margin: 50px auto;
-    border: 1px solid #000;
-    background: #fff;
-    text-align: center;
-  }
-}
-
-.overlay-form {
-  padding-bottom: 10px;
-  legend {
-    text-transform: uppercase;
-    background: #162029;
-    width: 800px;
-    color: #fff;
-    padding: 10px;
-    position: absolute;
-    left: 0;
-    z-index: 1001;
-  }
-
-  input[type="text"] {
-    width: 200px;
-    border-radius: 3px;
-    border: 1px solid #ddd;
-    padding: 8px;
-    margin-right: 15px;
-  }
-  select {
-    font-size: 0.9em;
-    width: 120px;
-    padding: 5px 20px 5px 10px;
-    background: #004774;
-    -webkit-appearance:none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    color: #fff;
-    border: none;
-  }
-  .primary {
-    margin: 20px 30px;
-    font-size: 0.9em;
-  }
-}
-
-.form-overlay-date {
-  width: 100px;
-}
-
-.select-arrow {
-  position: relative;
-  right: 20px;
-  color: #fff;
-}
-
-.radio-overlay {
-  margin-right: 30px !important;
-  vertical-align: middle;
-  input {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 2px;
-  }
-}
-
-.overlay-close {
-  color: #fff;
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 13px;
-  text-align: right;
-  z-index: 1002;
-}
-
-.overlay-legend {
-  margin: 0 5px;
-}
-
-#transactionOverlay {
-  @extend .overlay;
-}
-
-#formTransactions {
-  width: 100%;
-  height: 100%;
-}
-
-#accountOverlay {
-  @extend .overlay;
-}
-
-#budgetOverlay {
-  @extend .overlay;
-}
-
-#searchAccountGroup {
-  position: relative;
-  legend  {
-    height: 20px;
-  }
-  span {
-    position: absolute;
-    bottom: 46px;
-    left: 33px;
-    font-size: 1.1em;
-  }
-
-  input[type="text"] {
-    padding: 8px 10px 8px 35px;
-    width: 300px;
-    margin-right: 0;
-  }
-
-  button {
-    margin-left: 5px;
-  }
-}
-
-#addBudgetForm {
-  td, th {
-    padding: 10px;
-  }
-  
-  .button {
-    margin-left: 0;
-  }
-  
-  .button-budget {
-    @extend .button;
-    font-size: 0.9em;
-  }
-}
-
-.overview {
-  background: #FFFFFF;
-  padding: 30px;
-  color: #111;
-  .flex-cell {
-    align-items: center;
-    margin: 0 10px;
-    h2 {
-      text-align: center !important;
-    }
-  }
-}
-
-.add-upload {
-  position: relative;
-}
-
-#addOptions {
-  position: absolute;
-  background: #004774;
-  color: #fff;
-  list-style: none;
-  top: 35px;
-  left: 3%;
-  display: none;
-  li {
-    font-size: 1.2em;
-    padding: 10px 30px;
-    border: 1px solid #004774;
-    &:hover {
-      cursor: pointer;
-      color: #004774;
-      background: #fff;
-    }
-    span {
-      margin-right: 5px;
-    }
-  }
-}
-
-.search {
-  position: relative;
-  font-size: 1.4em;
-  width: 90%;
-  input[type="text"] {
-    background: #fff;
-    width: 100%;
-    padding: 9px 15px 8px 28px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  span {
-    position: absolute;
-    top: 12px;
-    left: 10px;
-    //font
-  }
-}
-
-.download {
-  text-align: right;
-}
-
-#downloadButton {
- // text-align: right;
-}
-
-.sum-total {
-  border: 1px solid #ccc;
-  font-size: 1.4em;
-  text-align: center;
-  padding:  35px 20px;
-  margin: 20px auto;
-  background: #fff;
-  text-transform: uppercase;
-  border-radius: 3px;
-  width: 95%;
-  h3 {
-    font-size: 0.9em;
-  }
-
-  h2 {
-    font-weight: normal;
-  }
-}
-
-.amount {
-  text-align: right;
-}
-
-.expense {
-  color: #ad000d;
-}
-
-.income {
-  color: #126146;
-}
-
-.date {
-  text-align: center;
-}
-
-.date-label {
-  @extend .date;
-}
-
-.amount-label {
-  @extend .amount;
-}
-
-.description {
-  text-align: left;
-}
-
-.description-label {
-  @extend .description;
-}
-
-.tag {
-  text-align: left;
-}
-
-.tag-label {
-  @extend .tag;
-}
-
-.account {
-  text-align: left;
-}
-
-.account-name {
-  @extend .account;
-}
-
-#activity {
-  width: 97.5%;
-  background: #fff;
-  font-size: 1.4em;
-  margin: 10px auto;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  td, th {
-    padding: 15px 20px;
-    border-bottom: 1px solid #ccc;
-  }
-
-  th {
-    font-weight: normal;
-    text-transform: uppercase;
-  }
-}
+@import 'base/base';
