--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,320 +1,32 @@
 * {
-  padding: 0;
-  margin: 0; }
+  margin: 0;
+  padding: 0; }
+  *:before, *:after {
+    box-sizing: inherit; }
 
 html {
-  background: #ddd;
   font: 62.5%/1.5 'Montserrat', sans-serif;
-  height: 100%; }
+  height: 100%;
+  box-sizing: border-box; }
 
 body {
   font-size: 10px;
   width: 100%;
-  height: 100%; }
-
-.nav {
-  background: #162029;
   height: 100%;
-  width: 15%;
-  position: fixed;
-  border-right: 1px solid #dcdee7; }
+  z-index: 100; }
 
-#menu {
-  text-transform: uppercase; }
-  #menu li {
-    font-size: 1.6em; }
-    #menu li a {
-      padding: 18px 10px;
-      text-decoration: none;
-      color: #fff;
-      display: block;
-      border-bottom: 1px solid #22313f; }
-      #menu li a:hover {
-        background: #22313f;
-        color: #3498DB; }
-      #menu li a span {
-        padding: 0 10px; }
+img {
+  box-sizing: content-box; }
 
-.flex-grid {
-  display: -webkit-box;
-  /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;
-  /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;
-  /* TWEENER - IE 10 */
-  display: -webkit-flex;
-  /* NEW - Chrome */
-  display: flex;
-  /* NEW, Spec - Opera 12.1, Firefox 20+ */ }
-
-.flex-cell {
-  -webkit-box-flex: 1;
-  /* OLD - iOS 6-, Safari 3.1-6 */
-  -moz-box-flex: 1;
-  /* OLD - Firefox 19- */
-  -webkit-flex: 1;
-  /* Chrome */
-  -ms-flex: 1;
-  /* IE 10 */
-  flex: 1; }
-
-.button, .primary, #addBudgetForm .button-budget {
-  border-radius: 3px;
-  text-transform: uppercase;
-  padding: 7px 24px;
-  font-size: 1.3em;
-  margin: 0 10px;
-  border: 1px solid transparent; }
-  .button span, .primary span, #addBudgetForm .button-budget span {
-    padding: 0 5px 0 0; }
-
-.primary {
-  background: #004774;
-  color: #fff; }
-  .primary:hover {
-    background: #fff;
-    color: #004774;
-    border: 1px solid #004774; }
-
-form fieldset {
-  padding: 0;
-  border: none; }
-
-.form-aligned {
-  text-align: left; }
-  .form-aligned h4 {
-    margin: 20px 0 0;
-    padding: 25px 0 10px;
-    text-align: left; }
-
-.form-control-group {
-  padding: 15px 20px; }
-  .form-control-group label {
-    margin-right: 5px; }
-
-.widget-container {
-  background: #fff;
-  border: 1px solid #ccc;
-  padding: 15px;
-  margin: 10px; }
-
-.chart-widget {
-  height: 300px; }
-
-.ct-label {
-  fill: #000 !important;
-  font-size: 1.3em; }
+#container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 200; }
 
 .content {
-  background: #ddd;
-  width: 85%;
-  margin-left: 15%;
-  height: 100%; }
-
-.overlay, #transactionOverlay, #accountOverlay, #budgetOverlay {
-  background: rgba(0, 0, 0, 0.6);
-  visibility: hidden;
-  position: absolute;
-  left: 0px;
-  top: 0px;
   width: 100%;
   height: 100%;
-  text-align: center;
-  z-index: 1000;
-  font-size: 1.4em; }
-  .overlay .overlay-box, #transactionOverlay .overlay-box, #accountOverlay .overlay-box, #budgetOverlay .overlay-box {
-    position: relative;
-    width: 820px;
-    margin: 50px auto;
-    border: 1px solid #000;
-    background: #fff;
-    text-align: center; }
-
-.overlay-form {
-  padding-bottom: 10px; }
-  .overlay-form legend {
-    text-transform: uppercase;
-    background: #162029;
-    width: 800px;
-    color: #fff;
-    padding: 10px;
-    position: absolute;
-    left: 0;
-    z-index: 1001; }
-  .overlay-form input[type="text"] {
-    width: 200px;
-    border-radius: 3px;
-    border: 1px solid #ddd;
-    padding: 8px;
-    margin-right: 15px; }
-  .overlay-form select {
-    font-size: 0.9em;
-    width: 120px;
-    padding: 5px 20px 5px 10px;
-    background: #004774;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    color: #fff;
-    border: none; }
-  .overlay-form .primary {
-    margin: 20px 30px;
-    font-size: 0.9em; }
-
-.form-overlay-date {
-  width: 100px; }
-
-.select-arrow {
-  position: relative;
-  right: 20px;
-  color: #fff; }
-
-.radio-overlay {
-  margin-right: 30px !important;
-  vertical-align: middle; }
-  .radio-overlay input {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 2px; }
-
-.overlay-close {
-  color: #fff;
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 13px;
-  text-align: right;
-  z-index: 1002; }
-
-.overlay-legend {
-  margin: 0 5px; }
-
-#formTransactions {
-  width: 100%;
-  height: 100%; }
-
-#searchAccountGroup {
-  position: relative; }
-  #searchAccountGroup legend {
-    height: 20px; }
-  #searchAccountGroup span {
-    position: absolute;
-    bottom: 46px;
-    left: 33px;
-    font-size: 1.1em; }
-  #searchAccountGroup input[type="text"] {
-    padding: 8px 10px 8px 35px;
-    width: 300px;
-    margin-right: 0; }
-  #searchAccountGroup button {
-    margin-left: 5px; }
-
-#addBudgetForm td, #addBudgetForm th {
-  padding: 10px; }
-#addBudgetForm .button, #addBudgetForm .primary, #addBudgetForm .button-budget {
-  margin-left: 0; }
-#addBudgetForm .button-budget {
-  font-size: 0.9em; }
-
-.overview {
-  background: #FFFFFF;
-  padding: 30px;
-  color: #111; }
-  .overview .flex-cell {
-    align-items: center;
-    margin: 0 10px; }
-    .overview .flex-cell h2 {
-      text-align: center !important; }
-
-.add-upload {
-  position: relative; }
-
-#addOptions {
-  position: absolute;
-  background: #004774;
-  color: #fff;
-  list-style: none;
-  top: 35px;
-  left: 3%;
-  display: none; }
-  #addOptions li {
-    font-size: 1.2em;
-    padding: 10px 30px;
-    border: 1px solid #004774; }
-    #addOptions li:hover {
-      cursor: pointer;
-      color: #004774;
-      background: #fff; }
-    #addOptions li span {
-      margin-right: 5px; }
-
-.search {
-  position: relative;
-  font-size: 1.4em;
-  width: 90%; }
-  .search input[type="text"] {
-    background: #fff;
-    width: 100%;
-    padding: 9px 15px 8px 28px;
-    border: 1px solid #ccc;
-    border-radius: 3px; }
-  .search span {
-    position: absolute;
-    top: 12px;
-    left: 10px; }
-
-.download {
-  text-align: right; }
-
-.sum-total {
-  border: 1px solid #ccc;
-  font-size: 1.4em;
-  text-align: center;
-  padding: 35px 20px;
-  margin: 20px auto;
-  background: #fff;
-  text-transform: uppercase;
-  border-radius: 3px;
-  width: 95%; }
-  .sum-total h3 {
-    font-size: 0.9em; }
-  .sum-total h2 {
-    font-weight: normal; }
-
-.amount, .amount-label {
-  text-align: right; }
-
-.expense {
-  color: #ad000d; }
-
-.income {
-  color: #126146; }
-
-.date, .date-label {
-  text-align: center; }
-
-.description, .description-label {
-  text-align: left; }
-
-.tag, .tag-label {
-  text-align: left; }
-
-.account, .account-name {
-  text-align: left; }
-
-#activity {
-  width: 97.5%;
-  background: #fff;
-  font-size: 1.4em;
-  margin: 10px auto;
-  border: 1px solid #ccc;
-  border-radius: 3px; }
-  #activity td, #activity th {
-    padding: 15px 20px;
-    border-bottom: 1px solid #ccc; }
-  #activity th {
-    font-weight: normal;
-    text-transform: uppercase; }
+  z-index: 200; }
 
 /*# sourceMappingURL=style.css.map */
